# battery-degradation-changepoint-public

./: CITATION.cff  LICENSE  LICENSE-CONTENT.md  LICENSE_PENDING.md  Makefile  PACKAGE_BUILD_REPORT.md  README.md  environment.yml  figure_manifest.yaml  pyproject.toml  release_manifest.csv  requirements.txt  table_manifest.yaml
.github/workflows/: ci.yml
configs/: figure-config.yaml  publication-double-column.mplstyle  publication-full-page.mplstyle
data/: README.md
data/frozen_results/h5/: accepted_battery_scientific_summary.csv  accepted_population_scientific_summary.csv  regular_eligible_cycles.csv
data/frozen_results/m4/: changepoint_method_predictions.csv  (+4 more)
docs/: ANALYTICAL_SCOPE.md  DATA_AVAILABILITY_TEXT.md  DATA_PROVENANCE.md  FIGURE_MANIFEST.md  REPRODUCIBILITY.md  TABLE_MANIFEST.md  VALIDATION_REPORT.md
scripts/: generate_all_figures.py  generate_all_tables.py  generate_figure.py  generate_table.py  prepare_data.py  validate_release.py
src/battery_degradation_publication/: __init__.py  data.py  figure_config.py  raw_data.py  rendering.py  validation.py
tables/machine_readable/: battery_technology_context.csv  changepoint_results.csv  computation_gates.csv  degradation_mechanisms_observability.csv  hierarchical_population_results.csv  preprocessing_summary.csv  transition_definitions.csv  truncation_results.csv
tables/reference/: computation_gates.tex  degradation_mechanisms_observability.tex  hierarchical_population_results.tex  references.bib
tests/: test_data.py  test_figure_generation.py  test_figure_inputs.py  test_table_generation.py
(+35 files in other folders)
