[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "battery-degradation-publication"
version = "0.1.0"
description = "Frozen-output replication of ten battery-degradation manuscript figures."
readme = "README.md"
requires-python = ">=3.11,<3.13"
authors = [
  {name = "Anna Jarosz-Kozyro"},
  {name = "Waldemar Bauer"},
  {name = "Jerzy Baranowski"},
]
dependencies = [
  "numpy==2.4.6",
  "pandas==2.3.3",
  "matplotlib==3.11.0",
  "PyYAML==6.0.3",
  "Pillow==12.2.0",
  "pypdf==6.13.3",
]

[project.optional-dependencies]
test = ["pytest==9.1.1"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
